Refactor to use constructor injection and modern Java streams
Co-authored-by: farook517 <56146198+farook517@users.noreply.github.com>